[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/art/Actors/sporker.png" type="Texture" id=1]
[ext_resource path="res://assets/art/Blocks/Blank.png" type="Texture" id=2]
[ext_resource path="res://src/Actors/Sporker.gd" type="Script" id=6]
[ext_resource path="res://assets/art/Actors/Angry Tomato Splat.png/1.png" type="Texture" id=7]
[ext_resource path="res://assets/art/Actors/Angry Tomato Splat.png/0.png" type="Texture" id=8]
[ext_resource path="res://assets/art/Actors/Angry Tomato Splat.png/2.png" type="Texture" id=9]
[ext_resource path="res://assets/art/Actors/hp.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 42.8068

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8.17046, 75.831 )

[sub_resource type="OccluderPolygon2D" id=4]
polygon = PoolVector2Array( 0, -32, 16, -24, 24, -16, 24, 16, 8, 32, -8, 32, -24, 16, -24, -16 )

[node name="Sporker" type="KinematicBody2D" groups=[
"enemy",
]]
collision_layer = 2
collision_mask = 11
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." groups=[
"enemy",
]]
position = Vector2( -1, -1 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
speed_scale = 2.0
playing = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -75.253, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.502457, -61.3202 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -0.334976, 48 )
shape = SubResource( 3 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 26, 0 )
enabled = true
cast_to = Vector2( 0, 128 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
visible = false
light_mask = 2
occluder = SubResource( 4 )
light_mask = 2

[node name="DeadTimer" type="Timer" parent="."]
one_shot = true

[node name="HealthBar" type="ColorRect" parent="."]
margin_left = -20.0
margin_top = -120.0
margin_right = 20.0
margin_bottom = -117.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalHealth" type="Sprite" parent="HealthBar"]
position = Vector2( 20, 2 )
texture = ExtResource( 10 )

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
